gcc/testsuite/rust/rustc/ui/const-generics/adt_const_params/const_param_ty_object_safety_dg.rs
#![feature(adt_const_params, unsized_const_params)]
#![allow(incomplete_features)]

use std::marker::{ConstParamTy_, UnsizedConstParamTy};

fn foo(a: &dyn ConstParamTy_) {}
// { dg-error ".E0038." "" { target *-*-* } .-1 }

fn bar(a: &dyn UnsizedConstParamTy) {}
// { dg-error ".E0038." "" { target *-*-* } .-1 }

fn main() {}

